test/SPI/report-ioi-in-spi.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

// RUN: %target-language-frontend -emit-module %t/Lib.code -I %t \
// RUN:   -enable-library-evolution \
// RUN:   -module-name Lib -emit-module-path %t/Lib.codemodule \
// RUN:   -language-version 5

/// Use of IOI types in SPI signatures is an error with -experimental-spi-only-imports
// RUN: %target-language-frontend -emit-module %t/ClientSPIOnlyMode.code -I %t \
// RUN:   -enable-library-evolution \
// RUN:   -language-version 5 -verify \
// RUN:   -experimental-spi-only-imports

/// Use of IOI types in SPI signatures is a warning without -experimental-spi-only-imports
// RUN: %target-language-frontend -emit-module %t/ClientDefaultMode.code -I %t \
// RUN:   -enable-library-evolution \
// RUN:   -language-version 5 -verify

//--- Lib.code

public struct IOIStruct {
    public init() {}
}

//--- ClientSPIOnlyMode.code

@_implementationOnly import Lib
// expected-warning @-1 {{'@_implementationOnly' is deprecated, use 'internal import' instead}}

@_spi(X) public fn spiClient(s: IOIStruct) -> IOIStruct { // expected-error 2 {{cannot use struct 'IOIStruct' here; 'Lib' has been imported as implementation-only}}
    return IOIStruct()
}

@_spi(X) @inlinable public fn inlinableClient(s: IOIStruct) -> IOIStruct { // expected-error 2 {{struct 'IOIStruct' cannot be used in an '@inlinable' function because 'Lib' was imported implementation-only}}
    return IOIStruct() // expected-error {{struct 'IOIStruct' cannot be used in an '@inlinable' function because 'Lib' was imported implementation-only}}
    // expected-error @-1 {{initializer 'init()' cannot be used in an '@inlinable' function because 'Lib' was imported implementation-only}}
}

//--- ClientDefaultMode.code

@_implementationOnly import Lib
// expected-warning @-1 {{'@_implementationOnly' is deprecated, use 'internal import' instead}}

@_spi(X) public fn spiClient(s: IOIStruct) -> IOIStruct { // expected-warning 2 {{cannot use struct 'IOIStruct' here; 'Lib' has been imported as implementation-only}}
    return IOIStruct()
}

@_spi(X) @inlinable public fn inlinableClient(s: IOIStruct) -> IOIStruct { // expected-error 2 {{struct 'IOIStruct' cannot be used in an '@inlinable' function because 'Lib' was imported implementation-only}}
    return IOIStruct() // expected-error {{struct 'IOIStruct' cannot be used in an '@inlinable' function because 'Lib' was imported implementation-only}}
    // expected-error @-1 {{initializer 'init()' cannot be used in an '@inlinable' function because 'Lib' was imported implementation-only}}
}
